--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.56.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.5.0",
+    "openai": "^5.16.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
